--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "dnd-frontend",
   "private": true,
   "scripts": {
+    "build:services": "turbo build --filter='./services/**/*'",
+    "build:s": "yarn build:services",
     "build": "turbo run build",
+    "build:p": "turbo build --filter='./packages/**/*'",
+    "build:packages": "yarn build:p",
+    "build:t": "turbo build --filter='./tools/**/*'",
+    "build:all": "turbo build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "clean": "turbo run clean && rm -rf node_modules/.cache && rm -rf .turbo"
   },
   "devDependencies": {
     "prettier": "^3.7.4",
@@ -14,17 +21,12 @@
     "typescript": "5.9.2"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
-  "packageManager": "yarn@4.12.0",
   "workspaces": [
     "services/*",
     "packages/*",
     "tools/*"
   ],
-  "resolutions": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.10"
-  }
+  "packageManager": "yarn@4.12.0"
 }
