chore: script fix

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "dnd-frontend",
   "private": true,
   "scripts": {
-    "build:services": "turbo build --filter='./services/**/*'",
-    "build:s": "yarn build:services",
     "build": "turbo run build",
     "build:p": "turbo build --filter='./packages/**/*'",
     "build:packages": "yarn build:p",
     "build:t": "turbo build --filter='./tools/**/*'",
+    "build:tools": "yarn build:t",
+    "build:services": "turbo build --filter='./services/**/*'",
+    "build:s": "yarn build:services",
     "build:all": "turbo build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
