--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -8,16 +8,29 @@
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@dnd-frontend/eslint-config": "*",
     "@dnd-frontend/typescript-config": "*",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/react-vite": "^10.1.10",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.1",
-    "typescript": "5.9.2"
+    "eslint-plugin-storybook": "^10.1.10",
+    "playwright": "^1.57.0",
+    "storybook": "^10.1.10",
+    "typescript": "5.9.2",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@dds/token": "*",
