--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -19,6 +19,7 @@
     "@storybook/addon-a11y": "^10.1.10",
     "@storybook/addon-docs": "^10.1.10",
     "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/builder-vite": "^10.1.11",
     "@storybook/react-vite": "^10.1.10",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
