--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -16,20 +16,21 @@
     "@chromatic-com/storybook": "^4.1.3",
     "@dnd-frontend/eslint-config": "*",
     "@dnd-frontend/typescript-config": "*",
-    "@storybook/addon-a11y": "^10.1.10",
-    "@storybook/addon-docs": "^10.1.10",
-    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-vitest": "^10.1.11",
     "@storybook/builder-vite": "^10.1.11",
-    "@storybook/react-vite": "^10.1.10",
+    "@storybook/react-vite": "^10.1.11",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.1",
-    "eslint-plugin-storybook": "^10.1.10",
+    "eslint-plugin-storybook": "^10.1.11",
     "playwright": "^1.57.0",
-    "storybook": "^10.1.10",
+    "react-docgen-typescript": "^2.4.0",
+    "storybook": "^10.1.11",
     "typescript": "5.9.2",
     "vitest": "^4.0.16"
   },
