--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -6,6 +6,7 @@
     "./*": "./src/*.tsx"
   },
   "scripts": {
+    "build": "vite build",
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
@@ -32,6 +33,8 @@
     "react-docgen-typescript": "^2.4.0",
     "storybook": "^10.1.11",
     "typescript": "5.9.2",
+    "vite": "^6.0.7",
+    "vite-plugin-dts": "^4.3.0",
     "vitest": "^4.0.16"
   },
   "dependencies": {
