chore: lucide-react를 추가해요.

--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@dds/token": "*",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
