fix: CI 환경에서 lefthook 없을 때 postinstall 스크립트 실패 방지
- lefthook이 설치되어 있지 않은 경우에도 yarn install 성공하도록 수정
- CI 환경에서는 git hooks가 필요 없으므로 lefthook 없어도 정상 동작

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "clean": "turbo run clean && rm -rf node_modules/.cache && rm -rf .turbo",
-    "postinstall": "lefthook install"
+    "postinstall": "command -v lefthook >/dev/null 2>&1 && lefthook install || true"
   },
   "devDependencies": {
     "prettier": "^3.7.4",
