fix(passboard): vitest 타입 정의 추가
- tsconfig.json에 vitest/globals와 @testing-library/jest-dom 타입 추가
- vitest.config.ts의 react 플러그인 타입 에러 수정
- type-check 통과 확인

--- a/services/passboard/tsconfig.json
+++ b/services/passboard/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@dnd-frontend/typescript-config/nextjs.json",
   "compilerOptions": {
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
     "paths": {
       "@/*": ["./src/*"]
     }
