chore: type check전 package build 추가

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
+      - name: Package Build
+        run: yarn build:packages
+
       - name: Run type check
         run: yarn check-types
 
