fix(ci): 서비스 빌드 검사 제외, 패키지만 검사
- type-check와 lint를 packages/* 만 대상으로 실행
- 전체 빌드 단계 제거
- 서비스는 CI 검사에서 제외

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -35,11 +35,8 @@ jobs:
       - name: Build packages
         run: yarn build:packages
 
-      - name: Run type check
-        run: yarn check-types
+      - name: Run type check (packages only)
+        run: yarn turbo check-types --filter='./packages/*'
 
-      - name: Run lint
-        run: yarn lint
-
-      - name: Run build
-        run: yarn build
+      - name: Run lint (packages only)
+        run: yarn turbo lint --filter='./packages/*'
