--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -32,14 +32,11 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Package Build
+      - name: Build packages
         run: yarn build:packages
 
-      - name: Run type check
-        run: yarn check-types
+      - name: Run type check (packages only)
+        run: yarn turbo check-types --filter='./packages/*'
 
-      - name: Run lint
-        run: yarn lint
-
-      - name: Run build
-        run: yarn build
+      - name: Run lint (packages only)
+        run: yarn turbo lint --filter='./packages/*'
