chore: packages only 검사 추가

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -1,17 +1,14 @@
-name: PR Check
+name: PR Check (packages)
 
 on:
   pull_request:
     branches:
       - main
     paths:
-      - '**.ts'
-      - '**.tsx'
+      - 'packages/**'
       - 'package.json'
       - 'yarn.lock'
       - 'turbo.json'
-      - '**/package.json'
-      - '**/tsconfig.json'
 
 jobs:
   check:
