fix(ci): PR 체크 워크플로를 패키지 전용으로 수정 (#29)
* fix(ci): 타입 체크 전에 패키지 빌드 추가

- @dds/desktop이 @dds/token에 의존하므로 타입 체크 전 패키지 빌드 필요
- yarn build:packages 단계 추가

* fix(ci): 서비스 빌드 검사 제외, 패키지만 검사

- type-check와 lint를 packages/* 만 대상으로 실행
- 전체 빌드 단계 제거
- 서비스는 CI 검사에서 제외

* chore: packages only 검사 추가

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -1,17 +1,14 @@
-name: PR Check
+name: PR Check (packages)
 
 on:
   pull_request:
     branches:
       - main
     paths:
-      - '**.ts'
-      - '**.tsx'
+      - 'packages/**'
       - 'package.json'
       - 'yarn.lock'
       - 'turbo.json'
-      - '**/package.json'
-      - '**/tsconfig.json'
 
 jobs:
   check:
@@ -32,11 +29,11 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Run type check
-        run: yarn check-types
+      - name: Build packages
+        run: yarn build:packages
 
-      - name: Run lint
-        run: yarn lint
+      - name: Run type check (packages only)
+        run: yarn turbo check-types --filter='./packages/*'
 
-      - name: Run build
-        run: yarn build
+      - name: Run lint (packages only)
+        run: yarn turbo lint --filter='./packages/*'
