--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "packages/*",
     "tools/*"
   ],
+  "resolutions": {
+    "vite": "7.1.5",
+    "vitest": "4.0.16"
+  },
   "packageManager": "yarn@4.12.0"
 }
