--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -28,6 +28,9 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@vanilla-extract/css": "^1.17.1",
+    "@vanilla-extract/recipes": "^0.5.5",
+    "@vanilla-extract/vite-plugin": "^5.0.1",
     "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.1",
@@ -36,9 +39,9 @@
     "react-docgen-typescript": "^2.4.0",
     "storybook": "^10.1.11",
     "typescript": "5.9.2",
-    "vite": "^6.0.7",
+    "vite": "7.1.5",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "^4.0.16"
+    "vitest": "4.0.16"
   },
   "dependencies": {
     "@dds/token": "*",
