--- a/services/form/package.json
+++ b/services/form/package.json
@@ -13,7 +13,8 @@
     "@dds/desktop": "*",
     "@dds/token": "*",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "^7.12.0"
   },
   "devDependencies": {
     "@dds/desktop": "*",
