--- a/services/form/package.json
+++ b/services/form/package.json
@@ -27,7 +27,13 @@
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
+    "msw": "^2.12.7",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
