--- a/services/passboard/package.json
+++ b/services/passboard/package.json
@@ -12,13 +12,10 @@
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "check-types": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "mock:server": "npx tsx watch ./src/mocks/server.ts",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:v": "vitest",
-    "chromatic": "chromatic --exit-zero-on-changes"
+    "test:v": "vitest"
   },
   "dependencies": {
     "@channel.io/channel-web-sdk-loader": "^2.0.0",
@@ -39,16 +36,10 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3",
     "@dnd-frontend/eslint-config": "*",
     "@eslint/eslintrc": "^3",
     "@mswjs/http-middleware": "^0.10.3",
     "@playwright/test": "^1.52.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-nextjs-vite": "8.6.12",
-    "@storybook/react": "^8.6.12",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/react-query-devtools": "^5.76.1",
@@ -72,11 +63,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-storybook": "^0.12.0",
     "express": "^5.1.0",
     "jsdom": "^26.1.0",
     "msw": "^2.8.2",
-    "storybook": "^8.6.12",
     "vitest": "^4.0.16"
   },
   "license": "MIT"
