--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@dds/token": "*",
+    "@radix-ui/react-popover": "^1.1.15",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
