--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -14,7 +14,8 @@
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
@@ -25,6 +26,7 @@
     "@storybook/addon-vitest": "^10.1.11",
     "@storybook/builder-vite": "^10.1.11",
     "@storybook/react-vite": "^10.1.11",
+    "@storybook/test-runner": "^0.24.2",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
@@ -35,7 +37,7 @@
     "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.1",
     "eslint-plugin-storybook": "^10.1.11",
-    "playwright": "^1.57.0",
+    "playwright": "^1.58.1",
     "react-docgen-typescript": "^2.4.0",
     "storybook": "^10.1.11",
     "typescript": "5.9.2",
