--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -33,6 +33,7 @@
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/vite-plugin": "^5.0.1",
+    "@vitejs/plugin-react": "^5.1.3",
     "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.1",
