fix: 누락된 의존성 추가

--- a/services/passboard/package.json
+++ b/services/passboard/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@dnd-frontend/eslint-config": "*",
+    "@dnd-frontend/typescript-config": "*",
     "@eslint/eslintrc": "^3",
     "@mswjs/http-middleware": "^0.10.3",
     "@playwright/test": "^1.52.0",
