--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,50 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# [Dependencies - Yarn PnP Zero-install]
+.pnp.*
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
-# Dependencies
-node_modules
-.pnp
-.pnp.js
+# 혹시 모를 node_modules 및 관련 캐시 무시
+node_modules/
 
-# Local env files
+# [Local env files]
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Testing
+# [Testing]
 coverage
 
-# Turbo
+# [Turbo]
 .turbo
 
-# Vercel
+# [Vercel]
 .vercel
 
-# Build Outputs
+# [Build Outputs]
 .next/
 out/
 build
 dist
 
-
-# Debug
+# [Debug]
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Misc
+# [Misc]
 .DS_Store
 *.pem
 
-# TypeScript build info
+# [TypeScript build info]
 *.tsbuildinfo
 
+# [Storybook]
 *storybook.log
 storybook-static
