--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -34,23 +34,23 @@
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/vite-plugin": "^5.0.1",
     "@vitejs/plugin-react": "^5.1.3",
-    "@vitest/browser-playwright": "^4.0.16",
-    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/browser-playwright": "4.0.18",
+    "@vitest/coverage-v8": "4.0.18",
     "eslint": "^9.39.1",
     "eslint-plugin-storybook": "^10.1.11",
     "playwright": "^1.58.1",
     "react-docgen-typescript": "^2.4.0",
     "storybook": "^10.1.11",
-    "typescript": "5.9.2",
+    "typescript": "5.9.3",
     "vite": "7.1.5",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "4.0.16"
+    "vitest": "4.0.18"
   },
   "dependencies": {
     "@dds/token": "*",
     "@radix-ui/react-popover": "^1.1.15",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
   }
 }
