chore(desktop,passboard,tools): PnP 전환 및 설정 갱신 (#44)
* chore: nodeLinker:node-modules 제외, pnp로 변경

* chore: yarnrc내 dependencies 명시 추가

* chore: zero install 관련 파일 추가 및 스크립트 변경

* chore: desktop 일부 패키지 최신화 수정.

* refactor: deprecated 타입 수정 및 eslint 규칙 수정

* chore: passboard 패키지 버전 최신화 및 tsconfig 수정

* chore: eslint turbo 패키지 최신화 추가

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,24 @@
-nodeLinker: node-modules
+packageExtensions:
+  '@vitest/browser-playwright@*':
+    peerDependencies:
+      vite: '*'
+  '@vitest/browser@*':
+    peerDependencies:
+      vite: '*'
 
-nmHoistingLimits: workspaces
+  'storybook@*':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      vitest: '*'
+
+  'next@*':
+    dependencies:
+      '@vanilla-extract/next-plugin': '*'
+
+  '@hookform/resolvers@*':
+    peerDependencies:
+      zod: '*'
+  'zod@*':
+    dependencies:
+      zod: '*'
