chore(root): Yarn PnP ESLint IDE 연동 복구
- 워크스페이스 루트에 ESLint 9와 SDK 생성 도구 의존성을 추가해 IDE가 ESLint 라이브러리를 로드하도록 정비했습니다.
- Yarn SDK 기반 ESLint 래퍼 파일과 VSCode 설정을 갱신해 PnP 환경에서 진단/자동수정이 안정적으로 동작하도록 했습니다.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "postinstall": "command -v lefthook >/dev/null 2>&1 && lefthook install || true"
   },
   "devDependencies": {
+    "@yarnpkg/sdks": "^3.2.3",
+    "eslint": "9",
     "prettier": "^3.7.4",
+    "tslib": "^2.8.1",
     "turbo": "^2.8.3",
     "typescript": "5.9.2"
   },
