--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -49,6 +49,8 @@
   "dependencies": {
     "@dds/token": "*",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.562.0",
     "react": "19.2.4",
     "react-dom": "19.2.4"
