--- a/packages/dds-desktop/package.json
+++ b/packages/dds-desktop/package.json
@@ -17,8 +17,21 @@
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook"
   },
+  "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.4",
+    "lucide-react": "^0.562.0"
+  },
+  "peerDependencies": {
+    "framer-motion": "^12.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "vanilla-extract": "^1.0.0"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
+    "@dds/token": "*",
     "@dnd-frontend/eslint-config": "*",
     "@dnd-frontend/typescript-config": "*",
     "@storybook/addon-a11y": "^10.1.11",
@@ -38,22 +51,16 @@
     "@vitest/coverage-v8": "4.0.18",
     "eslint": "^9.39.1",
     "eslint-plugin-storybook": "^10.1.11",
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.562.0",
     "playwright": "^1.58.1",
+    "react": "^19.2.4",
     "react-docgen-typescript": "^2.4.0",
+    "react-dom": "^19.2.0",
     "storybook": "^10.1.11",
     "typescript": "5.9.3",
     "vite": "7.1.5",
     "vite-plugin-dts": "^4.3.0",
     "vitest": "4.0.18"
-  },
-  "dependencies": {
-    "@dds/token": "*",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-slot": "^1.2.4",
-    "framer-motion": "^12.34.3",
-    "lucide-react": "^0.562.0",
-    "react": "19.2.4",
-    "react-dom": "19.2.4"
   }
 }
